CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

PROJECT(rdo_interface_test)

MESSAGE(STATUS "CREATE TEST FOR RDO_INTERFACE")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${RDO_BASE_DIRECTORY})

SET(SOURCE_FILES
	main.cpp)

SOURCE_GROUP(".test" FILES 
	${SOURCE_FILES})

FIND_PACKAGE(Boost COMPONENTS unit_test_framework REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(test_rdo_interface ${SOURCE_FILES})
ADD_DEPENDENCIES(test_rdo_interface rdo_nix_common)

IF(MSVC)
	SET_TARGET_PROPERTIES(test_rdo_interface PROPERTIES COMPILE_FLAGS "/EHa")
ENDIF()

TARGET_LINK_LIBRARIES(test_rdo_interface rdo_nix_common)
TARGET_LINK_LIBRARIES(test_rdo_interface ${Boost_LIBRARIES})