CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

MESSAGE(STATUS "CREATE TEST FOR RDO_SMART_PRT")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${RDO_BASE_DIRECTORY})

SET(SOURCE_FILES
	main.cpp)

FIND_PACKAGE(Boost COMPONENTS unit_test_framework REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(test_rdo_smart_prt ${SOURCE_FILES})
ADD_DEPENDENCIES(test_rdo_smart_prt rdo_nix_common)

TARGET_LINK_LIBRARIES(test_rdo_smart_prt rdo_nix_common)
TARGET_LINK_LIBRARIES(test_rdo_smart_prt ${Boost_LIBRARIES})